# codenameFE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: Animations.cpp  Animations.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Event.cpp  Event.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Main.cpp  Math.cpp  Math.hpp  RandomUtils.cpp  RandomUtils.hpp  Timer.cpp  Timer.hpp  TriggerClock.cpp  TriggerClock.hpp  Version.hpp
src/layers/: EditorLayer.cpp  EditorLayer.hpp  Layer.hpp  MaterialEditLayer.cpp  MaterialEditLayer.hpp
src/renderer/: AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  CameraControls.cpp  CameraControls.hpp  LightCasters.cpp  LightCasters.hpp  OpenGL.cpp  OpenGL.hpp  PrimitivesGen.cpp  PrimitivesGen.hpp  Renderer.cpp  Renderer.hpp
src/resources/shaders/: BloomDownsampler.frag  BloomUpsampler.frag  Cube.frag  Cube.vert  Default.frag  Default.vert  DefaultDepth.vert  Empty.frag  EnvMapper.frag  EnvMapper.vert  EnvPrefilter.frag  FlatColor.frag  FlatColor.vert  Irradiance.frag  Line.frag  Line.vert  PBR.frag  Picker.frag  Picker.vert  Quad.frag  Quad.vert  ScreenQuad.frag  ScreenQuad.vert  Skybox.frag  Skybox.vert
src/resources/shaders/deferred/: GBuf.frag  GBuf.vert  LightPass.frag  LightPass.vert  PointLightPass.frag  PrepLightPass.vert
src/resources/shaders/env_map/: BRDF.frag  EnvMapper.vert  Skybox.vert
src/resources/shaders/shadows/: Directional.geom  Point.frag  Point.geom  Point.vert  Spotlight.geom
src/scenes/: Components.cpp  Components.hpp  Entities.cpp  Entities.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/vendors/imgui/: imgui.h  imgui_widgets.cpp
tests/: Application_Tests.cpp  CMakeLists.txt  Entity_Tests.cpp  Entry.cpp  Filled.cpp  RandomStuff_Tests.cpp  Timer_Tests.cpp  TriggerClock_Tests.cpp
